--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://github.com/textadventures/squiffy
 				});
 			});
 		</script>
-		<link rel="stylesheet" href="style.css"/>
+		<link rel="stylesheet" href="novoestilo.css"/>
 	</head>
 	<body>
 		<div id="squiffy-container">
